-- ============================================================
-- 03_tables.sql
-- Create all tables with constraints.
-- Must be run after 01_extensions.sql and 02_enums.sql.
-- ============================================================


-- ------------------------------------------------------------
-- USERS
-- Accounts are created by an admin (created_by self-reference).
-- Only login is available, no self-registration.
-- ------------------------------------------------------------
CREATE TABLE users (
    id              UUID            PRIMARY KEY DEFAULT gen_random_uuid(),
    username        VARCHAR(50)     NOT NULL UNIQUE,
    email           VARCHAR(150)    NOT NULL UNIQUE,
    password_hash   TEXT            NOT NULL,
    role            user_role       NOT NULL DEFAULT 'viewer',
    language        user_language   NOT NULL DEFAULT 'fr',
    is_active       BOOLEAN         NOT NULL DEFAULT TRUE,
    created_by      UUID            REFERENCES users(id) ON DELETE SET NULL,
    created_at      TIMESTAMPTZ     NOT NULL DEFAULT NOW(),
    updated_at      TIMESTAMPTZ     NOT NULL DEFAULT NOW()
);


-- ------------------------------------------------------------
-- SESSIONS
-- Tracks each login session per user.
-- A session is created on login and revoked on logout.
-- ------------------------------------------------------------
CREATE TABLE sessions (
    id              UUID        PRIMARY KEY DEFAULT gen_random_uuid(),
    user_id         UUID        NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    ip_address      VARCHAR(45),                        -- Supports IPv4 and IPv6
    user_agent      TEXT,
    created_at      TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    last_activity_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    revoked_at      TIMESTAMPTZ                         -- NULL means still active
);


-- ------------------------------------------------------------
-- ACCESS_TOKENS
-- Short-lived tokens sent with every authenticated request.
-- Each session has one active access token at a time.
-- ------------------------------------------------------------
CREATE TABLE access_tokens (
    id          UUID        PRIMARY KEY DEFAULT gen_random_uuid(),
    session_id  UUID        NOT NULL REFERENCES sessions(id) ON DELETE CASCADE,
    user_id     UUID        NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    token_hash  TEXT        NOT NULL UNIQUE,
    expires_at  TIMESTAMPTZ NOT NULL,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    revoked_at  TIMESTAMPTZ,                            -- NULL means still valid
    CONSTRAINT chk_access_token_expiry CHECK (expires_at > created_at)
);


-- ------------------------------------------------------------
-- REFRESH_TOKENS
-- Long-lived tokens used only to obtain a new access token.
-- Rotated on every use (old one revoked, new one issued).
-- ------------------------------------------------------------
CREATE TABLE refresh_tokens (
    id           UUID        PRIMARY KEY DEFAULT gen_random_uuid(),
    session_id   UUID        NOT NULL REFERENCES sessions(id) ON DELETE CASCADE,
    user_id      UUID        NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    token_hash   TEXT        NOT NULL UNIQUE,
    expires_at   TIMESTAMPTZ NOT NULL,
    created_at   TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    last_used_at TIMESTAMPTZ,
    revoked_at   TIMESTAMPTZ,                           -- NULL means still valid
    CONSTRAINT chk_refresh_token_expiry CHECK (expires_at > created_at)
);


-- ------------------------------------------------------------
-- PASSWORD_RESET_TOKENS
-- Single-use tokens generated by admin to reset a user password.
-- Marked as used once consumed, never deleted for audit purposes.
-- ------------------------------------------------------------
CREATE TABLE password_reset_tokens (
    id          UUID        PRIMARY KEY DEFAULT gen_random_uuid(),
    user_id     UUID        NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    token_hash  TEXT        NOT NULL UNIQUE,
    expires_at  TIMESTAMPTZ NOT NULL,
    used_at     TIMESTAMPTZ,                            -- NULL means not yet used
    created_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT chk_reset_token_expiry CHECK (expires_at > created_at)
);


-- ------------------------------------------------------------
-- SENSORS
-- Describes each physical sensor registered in the system.
-- Deactivating a sensor does not delete its historical readings.
-- ------------------------------------------------------------
CREATE TABLE sensors (
    id          UUID        PRIMARY KEY DEFAULT gen_random_uuid(),
    name        VARCHAR(100) NOT NULL,
    type        sensor_type  NOT NULL,
    unit        VARCHAR(20)  NOT NULL,                  -- e.g. '%', '°C', 'ppm', 'lux'
    location    VARCHAR(150),                           -- e.g. 'Parcelle A', 'Serre 1'
    is_active   BOOLEAN      NOT NULL DEFAULT TRUE,
    created_at  TIMESTAMPTZ  NOT NULL DEFAULT NOW()
);


-- ------------------------------------------------------------
-- SENSOR_READINGS
-- Every measurement sent by the ESP32 is stored here.
-- This is the largest and most queried table in the system.
-- ------------------------------------------------------------
CREATE TABLE sensor_readings (
    id          UUID        PRIMARY KEY DEFAULT gen_random_uuid(),
    sensor_id   UUID        NOT NULL REFERENCES sensors(id) ON DELETE CASCADE,
    value       NUMERIC(10, 4) NOT NULL,
    measured_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
);


-- ------------------------------------------------------------
-- SENSOR_STATUS_LOGS
-- Tracks when a sensor goes online, offline, or into error state.
-- Required for the sensor failure alert type.
-- ------------------------------------------------------------
CREATE TABLE sensor_status_logs (
    id          UUID            PRIMARY KEY DEFAULT gen_random_uuid(),
    sensor_id   UUID            NOT NULL REFERENCES sensors(id) ON DELETE CASCADE,
    status      sensor_status   NOT NULL,
    reason      TEXT,                                   -- Optional description of the event
    logged_at   TIMESTAMPTZ     NOT NULL DEFAULT NOW()
);


-- ------------------------------------------------------------
-- THRESHOLDS
-- Min/max boundaries per sensor type set by an admin.
-- When a reading crosses these values, an alert is generated.
-- ------------------------------------------------------------
CREATE TABLE thresholds (
    id          UUID        PRIMARY KEY DEFAULT gen_random_uuid(),
    sensor_type sensor_type NOT NULL UNIQUE,            -- One threshold set per sensor type
    min_value   NUMERIC(10, 4),
    max_value   NUMERIC(10, 4),
    set_by      UUID        REFERENCES users(id) ON DELETE SET NULL,
    updated_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT chk_threshold_range CHECK (
        min_value IS NULL OR max_value IS NULL OR min_value < max_value
    )
);


-- ------------------------------------------------------------
-- ACTUATORS
-- Describes each physical actuator registered in the system.
-- ------------------------------------------------------------
CREATE TABLE actuators (
    id                  UUID            PRIMARY KEY DEFAULT gen_random_uuid(),
    name                VARCHAR(100)    NOT NULL,
    type                actuator_type   NOT NULL,
    status              actuator_status NOT NULL DEFAULT 'off',
    last_triggered_at   TIMESTAMPTZ,
    created_at          TIMESTAMPTZ     NOT NULL DEFAULT NOW()
);


-- ------------------------------------------------------------
-- ACTIONS
-- Every control event is logged here regardless of source.
-- triggered_by is nullable for automatic system actions.
-- ------------------------------------------------------------
CREATE TABLE actions (
    id              UUID            PRIMARY KEY DEFAULT gen_random_uuid(),
    actuator_id     UUID            NOT NULL REFERENCES actuators(id) ON DELETE CASCADE,
    triggered_by    UUID            REFERENCES users(id) ON DELETE SET NULL,
    action_type     action_type     NOT NULL,
    source          action_source   NOT NULL,
    notes           TEXT,
    triggered_at    TIMESTAMPTZ     NOT NULL DEFAULT NOW()
);


-- ------------------------------------------------------------
-- ALERTS
-- Generated when a sensor reading crosses a threshold.
-- actuator_id is nullable (some alerts need no actuator response).
-- acknowledged_by is nullable until an admin acknowledges it.
-- ------------------------------------------------------------
CREATE TABLE alerts (
    id                  UUID            PRIMARY KEY DEFAULT gen_random_uuid(),
    sensor_id           UUID            REFERENCES sensors(id) ON DELETE SET NULL,
    actuator_id         UUID            REFERENCES actuators(id) ON DELETE SET NULL,
    type                alert_type      NOT NULL,
    message             TEXT            NOT NULL,
    severity            alert_severity  NOT NULL DEFAULT 'medium',
    is_acknowledged     BOOLEAN         NOT NULL DEFAULT FALSE,
    acknowledged_by     UUID            REFERENCES users(id) ON DELETE SET NULL,
    triggered_at        TIMESTAMPTZ     NOT NULL DEFAULT NOW(),
    acknowledged_at     TIMESTAMPTZ,
    CONSTRAINT chk_acknowledgement CHECK (
        (is_acknowledged = FALSE AND acknowledged_by IS NULL AND acknowledged_at IS NULL)
        OR
        (is_acknowledged = TRUE AND acknowledged_by IS NOT NULL AND acknowledged_at IS NOT NULL)
    )
);


-- ------------------------------------------------------------
-- SCRIPT_LOGS
-- Dedicated log for every CLI batch script execution.
-- executed_by is nullable for scheduled/automated runs.
-- ------------------------------------------------------------
CREATE TABLE script_logs (
    id              UUID            PRIMARY KEY DEFAULT gen_random_uuid(),
    executed_by     UUID            REFERENCES users(id) ON DELETE SET NULL,
    command         TEXT            NOT NULL,
    result          TEXT,
    source          action_source   NOT NULL DEFAULT 'cli',
    executed_at     TIMESTAMPTZ     NOT NULL DEFAULT NOW()
);


-- ------------------------------------------------------------
-- EXPORTS
-- Tracks every CSV export generated from the application.
-- filters stores the query parameters used as JSON text.
-- ------------------------------------------------------------
CREATE TABLE exports (
    id          UUID        PRIMARY KEY DEFAULT gen_random_uuid(),
    exported_by UUID        NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    export_type export_type NOT NULL,
    filters     JSONB,                                  -- e.g. {"from": "2025-01-01", "sensor_id": "..."}
    file_path   TEXT,                                   -- Server path to generated CSV file
    created_at  TIMESTAMPTZ NOT NULL DEFAULT NOW()
);
